# second_view_app

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  paths.py  pyproject.toml  requirements.txt  server.py
backend/: __init__.py  paths.py  server.py
doc/: 0-main.md  1-chart.md  1.1-view-stability.md  1.2-range-selection.md  2-trend-calc.md
scripts/: serverctl
static/: index.html
static/css/: app.css
static/js/: api.js  app.js  chart.js  clock.js  config.js  controls.js  data.js  dom.js  format.js  legend.js  marketstate.js  range.js  sidebar.js  state.js  timeline.js  toolbar.js
